:rotating_light: Updated application name and README as well as a typescript issue within the renderer.tsx file by introducing a root HTML element

--- a/.eslintrc
+++ b/.eslintrc
@@ -2,13 +2,22 @@
   "parser": "@typescript-eslint/parser",
   "plugins": ["@typescript-eslint", "css-modules"],
   "extends": [
+    "plugin:react/recommended",
     "plugin:css-modules/recommended",
     "plugin:@typescript-eslint/recommended",
     "prettier/@typescript-eslint",
     "plugin:prettier/recommended"
   ],
+  "ecmaFeatures":  {
+    "jsx":  true  // Allows for the parsing of JSX
+  },
   "rules": {
     "semi": ["error", "never"],
     "quotes": [2, "single"]
+  },
+  "settings": {
+    "react": {
+      "version": "detect"  // Tells eslint-plugin-react to automatically detect the version of React to use
+    }
   }
 }
