--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "electron-react-neon-typescript-boilerplate",
+  "name": "luftmail",
   "version": "0.1.0",
-  "description": "Electron boiler plate using React as the frontend and TypeScript + Rust as the backend via Neon",
+  "description": "OpenSource Email Client",
+  "private": true,
   "main": "./.webpack/main",
   "scripts": {
     "start": "electron-forge start",
@@ -33,8 +34,8 @@
     "@types/node": "^17.0.23",
     "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.14",
-    "@typescript-eslint/eslint-plugin": "^5.17.0",
-    "@typescript-eslint/parser": "^5.17.0",
+    "@typescript-eslint/eslint-plugin": "^5.18.0",
+    "@typescript-eslint/parser": "^5.18.0",
     "babel-loader": "^8.2.4",
     "babel-preset-es2015-node": "^6.1.1",
     "babel-preset-react": "^6.24.1",
@@ -45,6 +46,7 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-css-modules": "^2.11.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.29.4",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "node-loader": "^2.0.0",
@@ -65,6 +67,7 @@
     "boilerplate"
   ],
   "dependencies": {
+    "@types/jest": "^27.4.1",
     "electron-squirrel-startup": "^1.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
