--- a/src/native/Cargo.toml
+++ b/src/native/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "electron-react-neon-typescript-boilerplate"
+name = "luftmail"
 version = "0.1.0"
-description = "Electron boiler plate using React as the frontend and TypeScript + Rust as the backend via Neon"
+description = "OpenSource Email Client"
 authors = ["Lennart Hase"]
 license = "ISC"
 edition = "2018"
