--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,9 @@
   "compilerOptions": {
     // project options
     "lib": [
-      "ESNext",
-      "dom"
+      "dom",
+      "dom.iterable",
+      "esnext"
     ], // specifies which default set of type definitions to use ("DOM", "ES6", etc)
     "outDir": "lib", // .js (as well as .d.ts, .js.map, etc.) files will be emitted into this directory.,
     "removeComments": true, // Strips all comments from TypeScript files when converting into JavaScript- you rarely read compiled code so this saves space
@@ -25,6 +26,7 @@
     "allowUnreachableCode": false, // pick up dead code paths
     "noImplicitAny": false, // In some cases where no type annotations are present, TypeScript will fall back to a type of any for a variable when it cannot infer the type.
     "strictNullChecks": true, // When strictNullChecks is true, null and undefined have their own distinct types and you’ll get a type error if you try to use them where a concrete value is expected.
+    "allowSyntheticDefaultImports": true,
 
     // Linter Checks
     "noImplicitReturns": true,
