--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/react-dom": "^17.0.14",
     "@typescript-eslint/eslint-plugin": "^5.18.0",
     "@typescript-eslint/parser": "^5.18.0",
+    "@vercel/webpack-asset-relocator-loader": "^1.7.2",
     "babel-loader": "^8.2.4",
     "babel-preset-es2015-node": "^6.1.1",
     "babel-preset-react": "^6.24.1",
@@ -68,6 +69,7 @@
   ],
   "dependencies": {
     "@types/jest": "^27.4.1",
+    "electron-acrylic-window": "^0.5.11",
     "electron-squirrel-startup": "^1.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
